<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="EditNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="@dimen/margin_padding_size_large"
            >

            <Button
                android:id="@+id/btn_blue"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:backgroundTint="@color/blue_radio_group"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_purple"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:backgroundTint="@color/purple_radio_group"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_pink"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:backgroundTint="@color/pink_radio_group"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_gray"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:backgroundTint="@color/gray_radio_group"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_yellow"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_medium"
                android:backgroundTint="@color/yellow_radio_group"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_name_til"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="@dimen/margin_padding_size_xlarge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_hint"
                android:textSize="30sp"
                android:fontFamily="@font/secular"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_description_til"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginHorizontal="@dimen/margin_padding_size_xlarge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_description_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description_hint"
                android:textSize="24sp"
                android:fontFamily="@font/secular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_padding_size_large"
            android:layout_marginHorizontal="@dimen/margin_padding_size_xlarge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/hint_date"
                android:fontFamily="@font/secular"
                android:textSize="24sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_padding_size_large"
            android:layout_marginHorizontal="@dimen/margin_padding_size_xlarge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/hint_hour"
                android:fontFamily="@font/secular"
                android:textSize="24sp"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/margin_padding_size_xxlarge"
            android:layout_marginTop="@dimen/margin_padding_size_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_reminder"/>

            <Switch
                android:id="@+id/switch_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>



    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="230dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        android:backgroundTint="@android:color/darker_gray"
        android:contentDescription="TODO"
        android:layout_margin="@dimen/margin_padding_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNoteFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="230dp"
        android:src="@drawable/ic_baseline_check_24"
        android:backgroundTint="@android:color/darker_gray"
        android:contentDescription="TODO"
        android:layout_margin="@dimen/margin_padding_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>